--- a/assets/base.css
+++ b/assets/base.css
@@ -2167,10 +2167,23 @@ details[open] > .header__icon--menu .icon-hamburger {
 }
 
 /* Header menu */
-.header__inline-menu {
+/* .header__inline-menu {
   margin-left: -1.2rem;
   grid-area: navigation;
   display: none;
+} */
+
+.header__inline-menu {
+    position: absolute;
+    top: 136%;
+    left: 15px;
+    width: 292px;
+}
+.list-menu--inline {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    width: 292px;
 }
 
 .header--top-center .header__inline-menu,
@@ -2330,3 +2343,520 @@ details-disclosure > details {
   }
 }
 
+* {
+    box-sizing: border-box;
+}
+
+body {
+    display: block;
+    background-color: #f9f9f9;
+    min-height: 100%;
+    font-family: 'Poppins', sans-serif!important;
+    font-weight: 500;
+    font-style: normal;
+    font-size: 15px;
+    line-height: 24px;
+    color: #7d7d7d;
+    margin: 0;
+    padding: 0;
+    border: 0;
+    vertical-align: baseline;
+    height: 100%;
+}
+
+.blog-grid .post .title, .draw-buttons .svg, .order-table th, .page-title .title, a, abbr, acronym, address, applet, article, aside, audio, b, big, blockquote, body, canvas, caption, center, cite, code, dd, del, details, dfn, div, dl, dt, em, embed, fieldset, figcaption, figure, footer, form, h1, h2, h3, h4, h5, h6, header, hgroup, html, i, iframe, img, ins, kbd, label, legend, li, mark, menu, nav, object, ol, output, p, pre, q, ruby, s, samp, section, small, span, strike, strong, sub, summary, sup, table, tbody, td, tfoot, th, thead, time, tr, tt, u, ul, var, video {
+    border: 0;
+    font-size: 100%;
+    font: inherit;
+    vertical-align: baseline;
+    margin: 0;
+    padding: 0;
+}
+
+.inner-hero-section {
+    position: relative;
+     /* overflow: hidden; */
+     /* width: 100%; */
+    height: 100vh;
+    margin-bottom: 22px;
+     /* background-size: 100%; */
+     /* background-repeat: no-repeat; */
+     /* object-fit: fill; */
+}
+
+.inner-hero-section img,
+.inner-hereo-seciton svg {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    width: 100%;
+    z-index: -1;
+}
+
+.picture-card-container {
+    columns: 3 200px;
+    column-gap: 22px;
+}
+
+.picture-card {
+    text-align: center;
+    padding: 2px;
+    display: inline-block;
+    width: 100%;
+}
+
+/* .picture-card:hover {
+    background: #fff;
+} */
+
+.picture {
+    display: block;
+    width: 100%;
+    height: 100%;
+}
+
+#sidebar-holder {
+    position: relative;
+    float: left;
+    width: 290px;
+    transition-duration: .2s;
+    height: 1273px;
+}
+
+#content-holder {
+    position: relative;
+    margin-left: 290px;
+}
+
+#sidebar {
+    width: 290px;
+    background: #fff;
+    color: #7d7d7d;
+    padding: 20px 0 0;
+    text-align: center;
+    position: fixed;
+    min-height: 100%;
+    display: flex;
+    flex-direction: column;
+    z-index: 99999;
+    transition-duration: .2s;
+    top: 0px;
+    height: 1273px;
+}
+
+@media (max-width: 1024px) {
+    #sidebar, #sidebar-holder {
+        width: 250px;
+        transition-duration: .2s;
+    }
+}
+
+#content {
+    display: block;
+    width: calc(100% - 290px);
+    position: fixed;
+}
+
+.template-index
+#page-content {
+    background: #f9f9f9;
+    z-index: 99;
+    position: relative;
+    padding: 0!important;
+    padding-top: 0;
+}
+
+#meta {
+    margin: 30px 0;
+    flex: 1;
+}
+
+#meta #responsive-menu {
+    display: none;
+}
+
+@media (max-width: 748px) {
+    #meta #responsive-menu {
+        display: inline-block;
+    }
+}
+
+#meta .item > a {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 36px;
+    height: 36px;
+    text-indent: -9999px;
+    z-index: 99;
+}
+
+@media (max-width: 748px) {
+    #meta {
+        margin-top: 20px;
+    }
+}
+
+#menu {
+
+    flex: 1;
+}
+
+#menu .collections-menu {
+    text-transform: uppercase;
+    margin-bottom: 40px;
+    font-size: 12px;
+    line-height: 1;
+    font-family: Montserrat,sans-serif;
+    font-weight: 500;
+    font-style: normal;
+    border-top: 1px solid #f7f7f7;
+    padding: 0;
+}
+
+#menu ul {
+    list-style: none;
+}
+
+li {
+    display: list-item;
+}
+
+a {
+    text-decoration: none;
+}
+
+#menu .draw-buttons .top-menu > li > .svg,
+#menu .top-menu > li > a,
+.draw-buttons #menu .top-menu >li > .svg #menu .draw-buttons .top-menu > li > .svg,
+#menu .top-menu > li > a,
+.draw-buttons #menu .top-menu > li > .svg {
+    display: inline-block;
+    padding: 10px 20px;
+    position: relative;
+}
+
+#menu .top-menu .draw-buttons .svg,
+#menu .top-menu a,
+.button,
+.draw-buttons #menu .top-menu .svg,
+button {
+    text-transform: uppercase;
+    letter-spacing: 1px;
+}
+
+#menu .collections-menu .draw-buttons .svg,
+#menu .collections-menu a,
+.draw-buttons #menu .collections-menu .svg {
+    color: #1d1d1d;
+}
+
+#menu .collections-menu .draw-buttons .svg,
+#menu .collections-menu a,
+.draw-buttons #menu .collections-menu .svg {
+    width: 100%;
+    padding: 19px 20px!important;
+    border-bottom: 1px solid #f7f7f7;
+}
+
+a .picture:hover {
+    cursor: pointer;
+}
+
+figure {
+    display: inline-block;
+    overflow: hidden;
+    position: relative;
+}
+
+figure.hover-effect {
+    background: #fff;
+    margin: 0;
+}
+
+figure img {
+    display: block;
+    transition: .5s ease-in-out;
+}
+
+figurecaption {
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+figure.hover-effect .caption-container {
+    width: 100%;
+    opacity: 0;
+    padding-top: 20px;
+    padding-left: 20px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    transform: translate3d(0,20px,0);
+    transition: opacity 1s,transform 1s;
+    text-align: left;
+}
+
+figure.hover-effect:hover .caption-container {
+    opacity: 1;
+    transform: translate3d(0,0,0);
+}
+
+figure.hover-effect:hover .picture {
+    opacity: .25;
+    transform: scale(1.1);
+}
+
+@media (max-width: 748px) {
+    #menu {
+        position: fixed;
+        background: #f7f7f7;
+        background: rgba(247,247,247,.95);
+        z-index: 99999;
+        padding: 0;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        margin: 0;
+        display: block;
+        opacity: 0;
+        visibility: hidden;
+    }
+}
+
+#responsive-close {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 60px;
+    height: 60px;
+    z-index: 99999;
+    display: none;
+}
+
+@media (min-width: 749px) {
+    #responsive-close {
+        display: none;
+    }
+    #responsive-menu {
+        display: none;
+    }
+}
+
+@media (max-width: 748px) {
+    #sidebar {
+        width: 100%;
+        top: 0!important;
+        padding: 30px 0 10px;
+        position: relative;
+        width: 100%;
+        height: auto;
+    }
+
+    #sidebar-holder {
+        width: 100%;
+        height: auto;
+    }
+}
+
+@media (max-width: 748px){
+    #content-holder {
+        height: auto!important;
+        width: 100%;
+        margin-left: 0;
+    }
+}
+
+#meta .item {
+    display: inline-block;
+    margin: 0 7px;
+    width: 36px;
+    height: 36px;
+    position: relative;
+}
+
+#meta .item .svg.hamburger {
+    top: -9px;
+    left: -12px;
+    shape-rendering: crispedges;
+}
+
+#meta .item .svg.cart {
+    -webkit-transform: scale(.35);
+    -ms-transform: scale(.35);
+    transform: scale(.35);
+    -webkit-transform-origin: top left;
+    -ms-transform-origin: top left;
+    transform-origin: top left;
+    top: 2px;
+    left: 2px;
+}
+
+#meta .item .svg.account {
+    -webkit-transform: scale(.23);
+    -ms-transform: scale(.23);
+    transform: scale(.23);
+    -webkit-transform-origin: top left;
+    -ms-transform-origin: top left;
+    transform-origin: top left;
+    top: 8px;
+    left: 5px;
+}
+
+#meta .item .svg.search {
+    -webkit-transform: scale(.23);
+    -ms-transform: scale(.23);
+    transform: scale(.23);
+    -webkit-transform-origin: top left;
+    -ms-transform-origin: top left;
+    transform-origin: top left;
+    top: 8px;
+    left: 5px;
+}
+
+#meta .item > .svg {
+    fill: #a3a3a3;
+    shape-rendering: geometricprecision;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+#meta .count {
+    color: #fff;
+    font-size: 11px;
+    line-height: 1;
+    font-family: Montserrat,sans-serif;
+    font-weight: 500;
+    font-style: normal;
+    position: absolute;
+    text-align: center;
+    top: 16px;
+    left: 5px;
+    width: 25px;
+}
+
+.fab {
+    padding: 10px;
+}
+
+.social-links {
+    font-size: 30px;
+}
+
+.social-link {
+    text-decoration: none;
+    color: #7d7d7d;
+}
+
+.card-body {
+    text-align: center;
+    text-transform: uppercase;
+    letter-spacing: .05rem;
+    width: 100%;
+}
+
+.card-body,
+.card-body:hover {
+    text-decoration: none;
+    color: #212529;
+}
+
+.card-body p {
+    margin-bottom: 0;
+}
+
+.picture-card a {
+    text-decoration: none;
+}
+
+#top-menu .nav-link:hover {
+    color: #2784db;
+    background-color: #f2f5f7;
+}
+
+#main-submenu .nav-link:hover {
+    color: #2784db;
+}
+
+.collection-title {
+    text-align: center;
+    padding: 30px 0;
+}
+
+#hero-slider {
+    position: relative;
+    aspect-ratio: 16 / 9;
+    overflow: hidden;
+    box-shadow: 0 0 30px rgba(0,0,0,0.3);
+    margin-right: 2px;
+    margin-left: 292px;
+}
+
+.slide {
+    position: relative;
+}
+
+.slide::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+    background-repeat: no-repeat;
+    opacity: 0.8;
+}
+
+#hero-slider ul {
+    position: relative;
+    list-style: none;
+    height: 100%;
+    width: 10000%;
+    padding: 0;
+    margin: 0;
+    transition: all 750ms ease;
+    left: 0;
+}
+
+#hero-slider ul li {
+    position: relative;
+    height: 100%;
+    float: left;
+    background-color: black;
+}
+
+#hero-slider ul li figure {
+    height: 100%;
+    width: calc(100vw - 292px);
+}
+
+.slide-title {
+    top: 30%;
+    left: 10%;
+    color: #fff;
+}
+
+.slide-title h2 {
+    font-size: 3rem;
+}
+
+.slide-title p {
+    font-size: 1.5rem;
+}
+
+@keyframes bounce {
+    0%, 20%, 50%, 80%, 100% {transform: translateY(0);}
+    40% {transform: translateY(-30px);}
+    60% {transform: translateY(-15px);}
+}
+
+.bounce {
+    animation-name: bounce;
+    animation-duration: 5s;
+    animation-fill-mode: both;
+    animation-iteration-count: infinite;
+}
